# Legal_lens

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config-backend.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  USER_MANUAL.md  pre-commit-config.yaml  pyproject.toml
.specify/memory/: constitution.md
.specify/scripts/bash/: dev.sh  setup.sh
.specify/specs/: data-model.md  plan.md  research.md  spec.md  tasks.md
.specify/templates/: bug_report.md  feature_spec.md  plan-template.md  spec-template.md  tasks-template.md
backend/: .env  .pre-commit-config.yaml  main.py  pre-commit-config.yaml  requirements.txt
backend/routes/: analyze.py  chat.py
backend/services/: chat_service.py  file_processor.py  gemini_service.py  ocr.py  ollama_service.py
frontend/: .env.production  .pre-commit-config.yaml  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ChatBot.css  ChatBot.jsx  Navbar.css  Navbar.jsx
frontend/src/context/: LangContext.jsx
frontend/src/lib/: api.js  lawsData.js  translations.js
frontend/src/pages/: Home.jsx  Laws.jsx  Results.jsx
specs/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-ollama-fallback/: plan.md  spec.md  tasks.md
