[project]
name = "legallens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.4.0",
    "google-genai>=1.16.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "vulture>=2.10.0",
    "pylint>=3.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "T20"]
ignore = ["S101", "B008", "S104", "E501"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["routes", "services"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
files = ["backend"]

# ── Bandit ────────────────────────────────────────────────────────────────────
[tool.bandit]
targets = ["backend"]
skips = ["B101", "B104"]

# ── Pylint ────────────────────────────────────────────────────────────────────
[tool.pylint.main]
source-roots = ["backend"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903", "W0613"]

[tool.pylint.format]
max-line-length = 100

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = "--tb=short -v"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["backend"]
omit = ["backend/tests/*", "backend/.venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
